sidebar item align fixed in mobile view

--- a/frontend/src/styles/header.css
+++ b/frontend/src/styles/header.css
@@ -104,6 +104,7 @@
 .main__navbar {
   padding: 15px 0px;
   background: #0f3443;
+  position: relative;
 }
 
 .mobile__menu i {
@@ -170,6 +171,10 @@
 }
 
 .logo-mobile {
+  display: none;
+}
+
+.userDisplay {
   display: none;
 }
 
@@ -240,11 +245,18 @@
 
   .authentication-tabs {
     display: block;
-    margin-top: -26px;
+    margin-top: -30px;
+    position: absolute;
+    margin-left: 18rem;
   }
 
   .logo-mobile {
     display: block;
+  }
+
+  .userDisplay {
+    display: block;
+    position: absolute;
   }
   
 }
